--- a/index.css
+++ b/index.css
@@ -497,142 +497,144 @@ tbody tr:hover {
 .fil > a.active{
     background-color: black;
 }
-/*Budget*/
-.budget-section {
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 20px 0;
-}
-
-.budget-container {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-.budget-container h1 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #333;
-}
-
-.budget-content {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-}
-
-#budget-form {
-  flex: 1;
-  width: 20%;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-}
-
-.form-group label {
-  margin-bottom: 5px;
-  font-weight: bold;
-  color: #555;
-}
-
-.form-group input {
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
-#budget-form button {
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
 /*bot section*/
-/* .bot-section {
+.bot-section {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 20px;
-  width: 99%;
-  height: 99%;
+  width: 100%;
+  height: 100%;
   overflow-y: scroll;
-} */
-
-/*budget section*/
-/* 
-#budget-form button:hover {
-  background-color: #0056b3;
 }
 
-#budget-table {
-  flex: 4;
-  width: 80%;
-  border-collapse: collapse;
+.full-content{
+    height: 100vh;
+    width: 98%;
 }
-
-#budget-table th,
-#budget-table td {
-  padding: 10px;
-  border: 1px solid #ddd;
-  text-align: left;
-}
-
-#budget-table th {
-  background-color: #f2f2f2;
-  font-weight: bold;
-}
-
-#budget-table tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
-} */
 
 /*chart*/
-/* .charts-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    padding: 20px;
-  }
-  
-  .chart-card {
+
+.chart-card {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 95vh;
+    width: 100%;
     background: white;
-    border-radius: 8px;
-    padding: 20px;
+    border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  }
-  
-  .chart-card h3 {
-    margin-bottom: 15px;
-    color: #333;
-    font-size: 1.2em;
-  }
-  
-  .line-controls {
-    margin-bottom: 15px;
+}
+
+
+.other-charts{
+    height: 95vh;
     display: flex;
-    gap: 15px;
-    flex-wrap: wrap;
-  }
-  
-  .line-controls label {
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px
+}
+.chart-card1{
+    background-color: white;
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.chart-card1 h3{
+    text-align: center;
+    padding: 10px 20px;
+    background-color:#e0a800;
+    border-radius: 10px;
+}
+
+/*charts*/
+.chart1{
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    gap: 5px;
+    gap: 20px;
+    height: 100%;
+}
+
+.chart1 .lineChart{
+    flex: 5;
+    background-color: azure;
+    border-radius: 10px;
+}
+
+.chart1 .line-controls{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.chart-card h3{
+    text-align: center;
+    padding: 10px 20px;
+    background-color:#e0a800;
+    border-radius: 10px;
+}
+
+.chart-card1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pieChart, .barChart{
+    background-color: whitesmoke;
+    border-radius: 10px;
+    max-width: 650px;
+    max-height: 600px;
+}
+
+.barChart{
+    background-color: whitesmoke;
+    border-radius: 10px;
+    max-width: 650px;
+    min-height: 600px;
+}
+
+.lineChart{
+    max-width: 80%;
+    max-height: 600px;
+}
+
+/*Print section*/
+.print-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+}
+.print-section h1{
+    position: absolute;
+    top: 5px;
+    padding: 30px 30%;
+    background-color: #ffbb00;
+    border-radius: 10px;
+    font-size: 25px;
+}
+
+.dbutton{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px; /* Adjust the size as needed */
+    height: 100px; /* Adjust the size as needed */
+    background-color: #000000;
+    color: #fff;
+    border-radius: 50%;
+    font-size: 25px;
     cursor: pointer;
-  }
-  
-  .line-controls input[type="checkbox"] {
-    cursor: pointer;
-  } */
+    border-color: transparent;
+    transition: background-color 0.3s ease;
+}
+.dbutton:hover {
+    background-color: #e0a800;
+}
